Fix S3Client tests that require JAXB
 - Add the javax.xml.bind module when running on JDK >= 9
 - Delete test for exception message when javax.xml.bind is not present
   because it would require another VM which seems overkill for this
   simple scenario.
 - Fix exception message to use `--add-modules` instead of `-addmods`
   which was only present in early access releases.

Issue: gradle/gradle-private#1199