@@ -101,7 +101,7 @@ public class S3Client {
                 Class.forName("javax.xml.bind.DatatypeConverter");
             } catch (ClassNotFoundException e) {
                 throw new GradleException("Cannot publish to S3 since the module 'java.xml.bind' is not available. "
-                    + "Please add \"-addmods java.xml.bind '-Dorg.gradle.jvmargs=-addmods java.xml.bind'\" to your GRADLE_OPTS.");
+                    + "Please add \"--add-modules java.xml.bind '-Dorg.gradle.jvmargs=--add-modules java.xml.bind'\" to your GRADLE_OPTS.");
             }
         }
     }
